fixing font size on mobile

--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -93,7 +93,7 @@ body {
                     font-family: $montserrat;
                     font-size: 18px;
                     margin: 10px 0;
-                    @media screen and (max-width: 500) {
+                    @media screen and (max-width: 500px) {
                         font-size: 16px;
                     }
                     ul {
